--- a/src/award-2021-bronze.html
+++ b/src/award-2021-bronze.html
@@ -36,7 +36,46 @@
                 </ul>
             </div>
             <div class="filter">
-                <p class="p1">五月中旬起本土疫情爆發，全民齊心防疫經歷嚴峻考驗，許多企業雖面臨經營的最大挑戰，仍無私提供不同形式的捐獻，挺身做公益，同島一命與全台一同挺過疫情，特頒特別獎給予高度肯定。</p>
+                <p class="p1">防疫期間眾多企業營運充滿挑戰，不僅要顧及員工安危更要兼顧營運，實屬不易因此本次票選廣增銀獎，讓台灣職場圍繞幸福企業正能量。</p>
+                <div class="search-bar classBtn">
+                    <input type="search" placeholder="職缺/職務關鍵字">
+                    <button class="search-submit-btn btn">搜尋</button>
+                </div>
+                <div class="category">
+                    <ul class="category-pc">
+                        <li><a href="" class="active btn">全部</a></li>
+                        <li><a href="" class="btn">一般生活服務</a></li>
+                        <li><a href="" class="btn">休閒娛樂服務</a></li>
+                        <li><a href="" class="btn">餐飲服務</a></li>
+                        <li><a href="" class="btn">飯店旅宿</a></li>
+                        <li><a href="" class="btn">大傳教育社福</a></li>
+                        <li><a href="" class="btn">金融管顧</a></li>
+                        <li><a href="" class="btn">科技研發</a></li>
+                        <li><a href="" class="btn">生技醫療</a></li>
+                        <li><a href="" class="btn">營造業</a></li>
+                        <li><a href="" class="btn">貿易流通</a></li>
+                        <li><a href="" class="btn">營造建築</a></li>
+                    </ul>
+                    <div class="category-sp search-bar classBtn">
+                        <!-- <input type="search" placeholder=請輸入公司或品牌關鍵字> -->
+                        <select class="filter">
+                            <option disabled selected>選類別</option>
+                            <option value="全部">全部</option>
+                            <option value="一般生活服務">一般生活服務</option>
+                            <option value="休閒娛樂服務">休閒娛樂服務</option>
+                            <option value="餐飲服務">餐飲服務</option>
+                            <option value="飯店旅宿">飯店旅宿</option>
+                            <option value="大傳教育社福">大傳教育社福</option>
+                            <option value="金融管顧">金融管顧</option>
+                            <option value="科技研發">科技研發</option>
+                            <option value="生技醫療">生技醫療</option>
+                            <option value="營造業">營造業</option>
+                            <option value="貿易流通">貿易流通</option>
+                            <option value="營造建築">營造建築</option>
+                        </select>
+                        <button class="search-submit-btn btn">搜尋</button>
+                    </div>
+                </div>
             </div>
             <div class="award-content silver-content">
                 <div class="item silver-item">
